--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://ret2me.github.io/WriteUps/'
 languageCode = 'en-us'
 title = 'Filip Poplewski'
 theme = ["hugo-embed-pdf-shortcode", "terminal"]
