--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,6 @@
 baseURL = 'https://ret2me.github.io/WriteUps/'
-canonifyurls=true
+canonifyurls = true
+canonifyURLs = true
 languageCode = 'en-us'
 title = 'Filip Poplewski'
 theme = ["hugo-embed-pdf-shortcode", "terminal"]
